SDKs/googleapis.com/tpu/v1/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get openapi
```
<!-- End SDK Installation -->

<!-- Start SDK Example Usage -->
## SDK Example Usage

```go
package main

import (
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()
    
    req := operations.TpuProjectsLocationsAcceleratorTypesListRequest{
        Security: operations.TpuProjectsLocationsAcceleratorTypesListSecurity{
            Oauth2: shared.SchemeOauth2{
                Authorization: "Bearer YOUR_ACCESS_TOKEN_HERE",
            }
            Oauth2c: shared.SchemeOauth2c{
                Authorization: "Bearer YOUR_ACCESS_TOKEN_HERE",
            },
        },
        PathParams: operations.TpuProjectsLocationsAcceleratorTypesListPathParams{
            Parent: "quidem",
        },
        QueryParams: operations.TpuProjectsLocationsAcceleratorTypesListQueryParams{
            DollarXgafv: "1",
            AccessToken: "quasi",
            Alt: "media",
            Callback: "aut",
            Fields: "in",
            Filter: "veritatis",
            Key: "quos",
            OauthToken: "molestiae",
            OrderBy: "blanditiis",
            PageSize: 4836021948156843738,
            PageToken: "ipsum",
            PrettyPrint: false,
            QuotaUser: "nihil",
            UploadType: "necessitatibus",
            UploadProtocol: "adipisci",
        },
    }
    
    res, err := s.Projects.TpuProjectsLocationsAcceleratorTypesList(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.ListAcceleratorTypesResponse != nil {
        // handle response
    }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### projects

* `TpuProjectsLocationsAcceleratorTypesList` - Lists accelerator types supported by this API.
* `TpuProjectsLocationsList` - Lists information about the supported locations for this service.
* `TpuProjectsLocationsNodesCreate` - Creates a node.
* `TpuProjectsLocationsNodesList` - Lists nodes.
* `TpuProjectsLocationsNodesReimage` - Reimages a node's OS.
* `TpuProjectsLocationsNodesStart` - Starts a node.
* `TpuProjectsLocationsNodesStop` - Stops a node, this operation is only available with single TPU nodes.
* `TpuProjectsLocationsOperationsCancel` - Starts asynchronous cancellation on a long-running operation. The server makes a best effort to cancel the operation, but success is not guaranteed. If the server doesn't support this method, it returns `google.rpc.Code.UNIMPLEMENTED`. Clients can use Operations.GetOperation or other methods to check whether the cancellation succeeded or whether the operation completed despite cancellation. On successful cancellation, the operation is not deleted; instead, it becomes an operation with an Operation.error value with a google.rpc.Status.code of 1, corresponding to `Code.CANCELLED`.
* `TpuProjectsLocationsOperationsDelete` - Deletes a long-running operation. This method indicates that the client is no longer interested in the operation result. It does not cancel the operation. If the server doesn't support this method, it returns `google.rpc.Code.UNIMPLEMENTED`.
* `TpuProjectsLocationsOperationsList` - Lists operations that match the specified filter in the request. If the server doesn't support this method, it returns `UNIMPLEMENTED`. NOTE: the `name` binding allows API services to override the binding to use different resource name schemes, such as `users/*/operations`. To override the binding, API services can add a binding such as `"/v1/{name=users/*}/operations"` to their service configuration. For backwards compatibility, the default name includes the operations collection id, however overriding users must ensure the name binding is the parent resource, without the operations collection id.
* `TpuProjectsLocationsTensorflowVersionsGet` - Gets TensorFlow Version.
* `TpuProjectsLocationsTensorflowVersionsList` - List TensorFlow versions supported by this API.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
